src/grammar/.antlr/TyCParser.py
# Generated from d:/Hoan/tyc-compiler-implement/src/grammar/TyC.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TyCParser ( Parser ):

    grammarFileName = "TyC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'<='", "'>='", 
                     "'=='", "'='", "'++'", "'--'", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'!='", "'<'", "'>'", "'||'", "'&&'", 
                     "'!'", "'['", "']'", "'('", "')'", "'{'", "'}'", "';'", 
                     "':'", "'.'", "','", "'auto'", "'break'", "'case'", 
                     "'continue'", "'default'", "'else'", "'float'", "'for'", 
                     "'if'", "'int'", "'return'", "'string'", "'struct'", 
                     "'switch'", "'void'", "'while'" ]

    symbolicNames = [ "<INVALID>", "LINE_COMMENT", "BLOCK_COMMENT", "LESS_THAN_OR_EQUAL", 
                      "GREATER_THAN_OR_EQUAL", "EQUAL", "ASSIGN", "INC", 
                      "DEC", "ADD", "SUB", "MUL", "DIV", "MOD", "NOT_EQUAL", 
                      "LESS_THAN", "GREATER_THAN", "OR", "AND", "NOT", "LSB", 
                      "RSB", "LP", "RP", "LB", "RB", "SEMI_COLON", "COLON", 
                      "DOT", "COMMA", "AUTO", "BREAK", "CASE", "CONTINUE", 
                      "DEFAULT", "ELSE", "FLOAT_KW", "FOR", "IF", "INT", 
                      "RETURN", "STRING", "STRUCT", "SWITCH", "VOID", "WHILE", 
                      "ID", "INTLIT", "FLOATLIT", "ILLEGAL_ESCAPE", "UNCLOSE_STRING", 
                      "STRINGLIT", "WS", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decl_list = 1
    RULE_decl = 2
    RULE_func_decl = 3
    RULE_func_return = 4
    RULE_return_type = 5
    RULE_param_list = 6
    RULE_param_prime = 7
    RULE_param_decl = 8
    RULE_stmt_list = 9
    RULE_struct_decl = 10
    RULE_struct_body_list = 11
    RULE_struct_member_list = 12
    RULE_struct_body = 13
    RULE_stmt = 14
    RULE_var_decl_stmt = 15
    RULE_var_init = 16
    RULE_block_stmt = 17
    RULE_decl_type = 18
    RULE_type = 19
    RULE_if_stmt = 20
    RULE_else_part = 21
    RULE_while_stmt = 22
    RULE_for_stmt = 23
    RULE_for_init = 24
    RULE_for_var_decl = 25
    RULE_for_cond = 26
    RULE_for_update = 27
    RULE_switch_stmt = 28
    RULE_switch_body = 29
    RULE_switch_item_list = 30
    RULE_switch_item = 31
    RULE_case_clause = 32
    RULE_default_clause = 33
    RULE_case_expr = 34
    RULE_case_add = 35
    RULE_case_mul = 36
    RULE_case_unary = 37
    RULE_case_primary = 38
    RULE_break_stmt = 39
    RULE_continue_stmt = 40
    RULE_return_stmt = 41
    RULE_return_expr = 42
    RULE_expr_stmt = 43
    RULE_expr = 44
    RULE_assign_expr = 45
    RULE_lhs = 46
    RULE_logic_or_expr = 47
    RULE_logic_and_expr = 48
    RULE_equality_expr = 49
    RULE_relational_expr = 50
    RULE_additive_expr = 51
    RULE_multiplicative_expr = 52
    RULE_unary_expr = 53
    RULE_prefix_expr = 54
    RULE_postfix_expr = 55
    RULE_postfix_suffix = 56
    RULE_primary_expr = 57
    RULE_struct_literal = 58
    RULE_argument_list = 59
    RULE_argument_tail = 60

    ruleNames =  [ "program", "decl_list", "decl", "func_decl", "func_return", 
                   "return_type", "param_list", "param_prime", "param_decl", 
                   "stmt_list", "struct_decl", "struct_body_list", "struct_member_list", 
                   "struct_body", "stmt", "var_decl_stmt", "var_init", "block_stmt", 
                   "decl_type", "type", "if_stmt", "else_part", "while_stmt", 
                   "for_stmt", "for_init", "for_var_decl", "for_cond", "for_update", 
                   "switch_stmt", "switch_body", "switch_item_list", "switch_item", 
                   "case_clause", "default_clause", "case_expr", "case_add", 
                   "case_mul", "case_unary", "case_primary", "break_stmt", 
                   "continue_stmt", "return_stmt", "return_expr", "expr_stmt", 
                   "expr", "assign_expr", "lhs", "logic_or_expr", "logic_and_expr", 
                   "equality_expr", "relational_expr", "additive_expr", 
                   "multiplicative_expr", "unary_expr", "prefix_expr", "postfix_expr", 
                   "postfix_suffix", "primary_expr", "struct_literal", "argument_list", 
                   "argument_tail" ]

    EOF = Token.EOF
    LINE_COMMENT=1
    BLOCK_COMMENT=2
    LESS_THAN_OR_EQUAL=3
    GREATER_THAN_OR_EQUAL=4
    EQUAL=5
    ASSIGN=6
    INC=7
    DEC=8
    ADD=9
    SUB=10
    MUL=11
    DIV=12
    MOD=13
    NOT_EQUAL=14
    LESS_THAN=15
    GREATER_THAN=16
    OR=17
    AND=18
    NOT=19
    LSB=20
    RSB=21
    LP=22
    RP=23
    LB=24
    RB=25
    SEMI_COLON=26
    COLON=27
    DOT=28
    COMMA=29
    AUTO=30
    BREAK=31
    CASE=32
    CONTINUE=33
    DEFAULT=34
    ELSE=35
    FLOAT_KW=36
    FOR=37
    IF=38
    INT=39
    RETURN=40
    STRING=41
    STRUCT=42
    SWITCH=43
    VOID=44
    WHILE=45
    ID=46
    INTLIT=47
    FLOATLIT=48
    ILLEGAL_ESCAPE=49
    UNCLOSE_STRING=50
    STRINGLIT=51
    WS=52
    ERROR_CHAR=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl_list(self):
            return self.getTypedRuleContext(TyCParser.Decl_listContext,0)


        def EOF(self):
            return self.getToken(TyCParser.EOF, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = TyCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.decl_list()
            self.state = 123
            self.match(TyCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decl_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(TyCParser.DeclContext,0)


        def decl_list(self):
            return self.getTypedRuleContext(TyCParser.Decl_listContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_decl_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl_list" ):
                listener.enterDecl_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl_list" ):
                listener.exitDecl_list(self)




    def decl_list(self):

        localctx = TyCParser.Decl_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl_list)
        try:
            self.state = 129
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [36, 39, 41, 42, 44, 46]:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.decl()
                self.state = 126
                self.decl_list()
                pass
            elif token in [-1]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def struct_decl(self):
            return self.getTypedRuleContext(TyCParser.Struct_declContext,0)


        def func_decl(self):
            return self.getTypedRuleContext(TyCParser.Func_declContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl" ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl" ):
                listener.exitDecl(self)




    def decl(self):

        localctx = TyCParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 133
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [42]:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.struct_decl()
                pass
            elif token in [36, 39, 41, 44, 46]:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.func_decl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_return(self):
            return self.getTypedRuleContext(TyCParser.Func_returnContext,0)


        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def LP(self):
            return self.getToken(TyCParser.LP, 0)

        def param_list(self):
            return self.getTypedRuleContext(TyCParser.Param_listContext,0)


        def RP(self):
            return self.getToken(TyCParser.RP, 0)

        def block_stmt(self):
            return self.getTypedRuleContext(TyCParser.Block_stmtContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_func_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_decl" ):
                listener.enterFunc_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_decl" ):
                listener.exitFunc_decl(self)




    def func_decl(self):

        localctx = TyCParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_func_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.func_return()
            self.state = 136
            self.match(TyCParser.ID)
            self.state = 137
            self.match(TyCParser.LP)
            self.state = 138
            self.param_list()
            self.state = 139
            self.match(TyCParser.RP)
            self.state = 140
            self.block_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_returnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def return_type(self):
            return self.getTypedRuleContext(TyCParser.Return_typeContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_func_return

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_return" ):
                listener.enterFunc_return(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_return" ):
                listener.exitFunc_return(self)




    def func_return(self):

        localctx = TyCParser.Func_returnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_func_return)
        try:
            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.return_type()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(TyCParser.TypeContext,0)


        def VOID(self):
            return self.getToken(TyCParser.VOID, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_return_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn_type" ):
                listener.enterReturn_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn_type" ):
                listener.exitReturn_type(self)




    def return_type(self):

        localctx = TyCParser.Return_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_return_type)
        try:
            self.state = 148
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [36, 39, 41, 46]:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.type_()
                pass
            elif token in [44]:
                self.enterOuterAlt(localctx, 2)
                self.state = 147
                self.match(TyCParser.VOID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param_prime(self):
            return self.getTypedRuleContext(TyCParser.Param_primeContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_param_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_list" ):
                listener.enterParam_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_list" ):
                listener.exitParam_list(self)




    def param_list(self):

        localctx = TyCParser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_param_list)
        try:
            self.state = 152
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [36, 39, 41, 46]:
                self.enterOuterAlt(localctx, 1)
                self.state = 150
                self.param_prime()
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_primeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param_decl(self):
            return self.getTypedRuleContext(TyCParser.Param_declContext,0)


        def COMMA(self):
            return self.getToken(TyCParser.COMMA, 0)

        def param_list(self):
            return self.getTypedRuleContext(TyCParser.Param_listContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_param_prime

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_prime" ):
                listener.enterParam_prime(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_prime" ):
                listener.exitParam_prime(self)




    def param_prime(self):

        localctx = TyCParser.Param_primeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_param_prime)
        try:
            self.state = 159
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.param_decl()
                self.state = 155
                self.match(TyCParser.COMMA)
                self.state = 156
                self.param_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 158
                self.param_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(TyCParser.TypeContext,0)


        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_param_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_decl" ):
                listener.enterParam_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_decl" ):
                listener.exitParam_decl(self)




    def param_decl(self):

        localctx = TyCParser.Param_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_param_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.type_()
            self.state = 162
            self.match(TyCParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stmt_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(TyCParser.StmtContext,0)


        def stmt_list(self):
            return self.getTypedRuleContext(TyCParser.Stmt_listContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_stmt_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt_list" ):
                listener.enterStmt_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt_list" ):
                listener.exitStmt_list(self)




    def stmt_list(self):

        localctx = TyCParser.Stmt_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_stmt_list)
        try:
            self.state = 168
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7, 8, 9, 10, 19, 22, 24, 30, 31, 33, 36, 37, 38, 39, 40, 41, 43, 45, 46, 47, 48, 51]:
                self.enterOuterAlt(localctx, 1)
                self.state = 164
                self.stmt()
                self.state = 165
                self.stmt_list()
                pass
            elif token in [25, 32, 34]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRUCT(self):
            return self.getToken(TyCParser.STRUCT, 0)

        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def LB(self):
            return self.getToken(TyCParser.LB, 0)

        def struct_body_list(self):
            return self.getTypedRuleContext(TyCParser.Struct_body_listContext,0)


        def RB(self):
            return self.getToken(TyCParser.RB, 0)

        def SEMI_COLON(self):
            return self.getToken(TyCParser.SEMI_COLON, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_struct_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStruct_decl" ):
                listener.enterStruct_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStruct_decl" ):
                listener.exitStruct_decl(self)




    def struct_decl(self):

        localctx = TyCParser.Struct_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_struct_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self.match(TyCParser.STRUCT)
            self.state = 171
            self.match(TyCParser.ID)
            self.state = 172
            self.match(TyCParser.LB)
            self.state = 173
            self.struct_body_list()
            self.state = 174
            self.match(TyCParser.RB)
            self.state = 175
            self.match(TyCParser.SEMI_COLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_body_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def struct_member_list(self):
            return self.getTypedRuleContext(TyCParser.Struct_member_listContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_struct_body_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStruct_body_list" ):
                listener.enterStruct_body_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStruct_body_list" ):
                listener.exitStruct_body_list(self)




    def struct_body_list(self):

        localctx = TyCParser.Struct_body_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_struct_body_list)
        try:
            self.state = 179
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [36, 39, 41, 46]:
                self.enterOuterAlt(localctx, 1)
                self.state = 177
                self.struct_member_list()
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_member_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def struct_body(self):
            return self.getTypedRuleContext(TyCParser.Struct_bodyContext,0)


        def struct_body_list(self):
            return self.getTypedRuleContext(TyCParser.Struct_body_listContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_struct_member_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStruct_member_list" ):
                listener.enterStruct_member_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStruct_member_list" ):
                listener.exitStruct_member_list(self)




    def struct_member_list(self):

        localctx = TyCParser.Struct_member_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_struct_member_list)
        try:
            self.state = 185
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 181
                self.struct_body()
                self.state = 182
                self.struct_body_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 184
                self.struct_body()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(TyCParser.TypeContext,0)


        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def SEMI_COLON(self):
            return self.getToken(TyCParser.SEMI_COLON, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_struct_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStruct_body" ):
                listener.enterStruct_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStruct_body" ):
                listener.exitStruct_body(self)




    def struct_body(self):

        localctx = TyCParser.Struct_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_struct_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 187
            self.type_()
            self.state = 188
            self.match(TyCParser.ID)
            self.state = 189
            self.match(TyCParser.SEMI_COLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl_stmt(self):
            return self.getTypedRuleContext(TyCParser.Var_decl_stmtContext,0)


        def block_stmt(self):
            return self.getTypedRuleContext(TyCParser.Block_stmtContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(TyCParser.If_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(TyCParser.While_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(TyCParser.For_stmtContext,0)


        def switch_stmt(self):
            return self.getTypedRuleContext(TyCParser.Switch_stmtContext,0)


        def break_stmt(self):
            return self.getTypedRuleContext(TyCParser.Break_stmtContext,0)


        def continue_stmt(self):
            return self.getTypedRuleContext(TyCParser.Continue_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(TyCParser.Return_stmtContext,0)


        def expr_stmt(self):
            return self.getTypedRuleContext(TyCParser.Expr_stmtContext,0)

